tests/errors/macro/parser_string_not_ended/char_not_ended.c
int main()
{
	char ch = 'l;
	return 0;
}